syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/GuildApply.proto

import "Role.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "GuildApplyProto";

message GuildApply{
     int64 id = 1;            // 申请号
     Role applicant = 2;     // 申请人
     string applyTime = 3;      // 申请时间
}

