syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/GuildMember.proto

import "Role.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "GuildMemberProto";

message GuildMember{
    Role role = 1;          // 成员的信息
    int32 position = 2;     // 职位
    int32 today = 3;        // 今日贡献值
    int32 all = 4;          // 总贡献值
}

