syntax = "proto3";

// protoc  --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/RoleInit.proto

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "RoleInitProto";

message RoleInit{
    int32 type = 1;
    string name = 2;
    int32 hp = 3;
    int32 mp = 4;
    string desc = 5;
}